--- a/tailwind/package.json
+++ b/tailwind/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "style-components": "^0.1.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
